--- a/platformio.ini
+++ b/platformio.ini
@@ -6,8 +6,9 @@ lib_ldf_mode = deep
 monitor_baud = 115200
 lib_deps =
   ArduinoJson
-  https://github.com/achuchev/SmartHome-CommonConfig
+  RemoteDebug
   https://github.com/achuchev/SmartHome-MqttClient
   https://github.com/achuchev/SmartHome-ESPWifiClient
   https://github.com/achuchev/SmartHome-FOTAClient
-lib_extra_dirs = ~/Documents/PlatformIO/libs
+  https://github.com/exstan/pubsubclient.git
+  https://github.com/exstan/smart-home-remote-print.git
