--- a/platformio.ini
+++ b/platformio.ini
@@ -4,6 +4,17 @@ board = nodemcuv2
 framework = arduino
 lib_ldf_mode = deep
 monitor_baud = 115200
+build_flags =
+    -D WIFI_SSID=\"****\"
+    -D WIFI_PASS=\"****\"
+    -D MQTT_SERVER=\"****\"
+    -D MQTT_SERVER_PORT=0000
+    -D MQTT_SERVER_FINGERPRINT=\"****\"
+    -D MQTT_USERNAME=\"****\"
+    -D MQTT_PASS=\"****\"
+    -D MQTT_PUBLISH_STATUS_INTERVAL=300000
+    -D ARDUINO_OTA_PASS_HASH=\"****\"
+    -D ARDUINO_OTA_PORT=0000
 lib_deps =
   ArduinoJson
   RemoteDebug
